# btc-trading-env

./: .dockerignore  Dockerfile  README.md  __init__.py  app.py  btc_prices.csv  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_seeds.py
server/: app.py  ui.html
