[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "btc-trading-env"
version = "1.0.0"
description = "BTC Algorithmic Trading OpenEnv — RL environment for automated portfolio management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["openenv", "rl", "trading", "bitcoin", "finance"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "websockets>=13.0",
    "openai>=1.54.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["btc_trading_env*"]

[project.scripts]
btc-trading-env = "app:app"
